Fixed section spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 /*** BASE STYLES ***/
 
-/*** ? - OVERALL SITE IS PUSHED TO THE LEFT WITH WHITE SPACE TO RIGHT...? ***/
+/*** I THINK I FIXED THIS! 12.11.19 - ? - OVERALL SITE IS PUSHED TO THE LEFT WITH WHITE SPACE TO RIGHT...? ***/
+/*** FOR COLOR SCHEME, TRY DARK, DARK, LIGHT, DARK - FROM TEMPLATE ***/
+
 
 body {
 	color: #ffffff;
@@ -44,7 +46,8 @@ nav ul li a {
 #nav-bar {
 	background-color: #000033;
 	font-family: 'Montserrat', sans-serif;
-	height: 50px;
+	font-size: 20px;
+	height: 60px;
 	margin: 0px;
 	padding: 0px;
 }
@@ -72,9 +75,8 @@ header {
 	background-image: url('../img/jeremy-thomas-4dpAqfTbvKA-unsplash.jpg');
 	/*Photo by Jeremy Thomas on Unsplash*/
 	background-size: cover;
-	font-size: 25px;
 	line-height: 75px;
-    height: 500px;
+    height: 540px;
     margin: 0px;
     padding: 65px;
     /*text-align: center;*/
@@ -109,34 +111,38 @@ header h2 {
 	background-size: cover;
 	color: #000033;
 	font-family: 'Montserrat', sans-serif;
-	height: 800px;
+	height: 1550px;
 	margin: 0px;
-    padding: 50px;
+    padding: 50px 0px 0px 0px;
     text-align: center;
 }
 
 #row-1 {
 	background-color: pink;
 	height: 200px;
-	width: 1075px;
+	margin: 0px 0px 0px 60px;
+	width: 1080px;
 }
 
 #row-2 {
 	background-color: blue;
 	height: 200px;
-	width: 1075px;
+	margin: 0px 0px 0px 60px;
+	width: 1080px;
 }
 
 #row-3 {
 	background-color: purple;
 	height: 200px;
-	width: 1075px;
+	margin: 0px 0px 0px 60px;
+	width: 1080px;
 }
 
 #row-4 {
 	background-color: grey;
 	height: 200px;
-	width: 1075px;
+	margin: 0px 0px 0px 60px;
+	width: 1080px;
 }
 
 #work h2 {
@@ -158,7 +164,7 @@ header h2 {
 	color: #000033;
 	height: 700px;
 	margin: 0px;
-	padding: 50px;
+	padding: 50px 0px 0px 0px;
 	text-align: center;
 }
 
@@ -173,6 +179,7 @@ header h2 {
 
 #about p {
 	font-family: 'Montserrat', sans-serif;
+	margin: 50px;
 	text-align: left;
 }
 
@@ -187,9 +194,9 @@ header h2 {
 	background-color: #000033; 
 	background-size: cover;
 	color: #ffffff;
-	height: 200px;
+	height: 400px;
 	margin: 0px;
-	padding: 50px;
+	padding: 50px 0px 0px 0px;
 	text-align: center;
 }
 
